<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Samsung Electronics Co., LTD
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/dialog_background"
             android:orientation="vertical"
             android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="left"
            android:text="@string/io_device_change"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dialog_text_size"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/hlist_background"
                android:gravity="center"
                android:paddingBottom="@dimen/dialog_button_vertical"
                android:paddingTop="@dimen/dialog_button_vertical"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:textSize="@dimen/dialog_text_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvConfirm"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/hlist_background"
                android:gravity="center"
                android:paddingBottom="@dimen/dialog_button_vertical"
                android:paddingTop="@dimen/dialog_button_vertical"
                android:text="@string/ok"
                android:textColor="@android:color/white"
                android:textSize="@dimen/dialog_text_size"
                android:textStyle="bold"
                />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>