<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Samsung Electronics Co., LTD
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/rounded_rect_bg"
             android:padding="@dimen/window_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/settings_element_spacing">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cursorListTitle"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvDoneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/hlist_background"
                android:paddingBottom="@dimen/back_button_vertical_padding"
                android:paddingEnd="@dimen/back_button_horizontal_padding"
                android:paddingStart="@dimen/back_button_horizontal_padding"
                android:paddingTop="@dimen/back_button_vertical_padding"
                android:text="@string/close_window"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_line_height"
            android:layout_marginBottom="@dimen/settings_element_spacing"
            android:background="@android:color/white"
            android:paddingEnd="@dimen/divider_line_padding"
            android:paddingStart="@dimen/divider_line_padding"/>

        <ListView
            android:id="@+id/lvCursors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/settings_element_spacing"
            android:layout_weight="5"
            android:divider="@android:color/transparent"
            android:dividerHeight="@dimen/cursor_list_divider_height"
            android:focusable="true"
            android:listSelector="@android:color/transparent">
        </ListView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_line_height"
            android:layout_marginBottom="@dimen/settings_element_spacing"
            android:background="@android:color/white"
            android:paddingEnd="@dimen/divider_line_padding"
            android:paddingStart="@dimen/divider_line_padding"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cursor_list_indicator_width"
            android:layout_marginBottom="@dimen/settings_element_spacing"
            android:background="@drawable/rounded_rect"
            android:paddingBottom="@dimen/cursor_list_element_v_padding"
            android:paddingEnd="@dimen/cursor_list_element_h_padding"
            android:paddingStart="@dimen/cursor_list_element_h_padding"
            android:paddingTop="@dimen/cursor_list_element_v_padding">

            <ImageView
                android:id="@+id/ivSoundIcon"
                android:layout_width="@dimen/cursor_list_image_size"
                android:layout_height="@dimen/cursor_list_image_size"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/cursor_list_element_margin"
                android:src="@drawable/sound"/>

            <TextView
                android:id="@+id/tvCursorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ivSoundIcon"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/cursor_list_element_margin"
                android:layout_toRightOf="@id/ivSoundIcon"
                android:gravity="center"
                android:text="@string/cursor_sounds"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>

            <ToggleButton
                android:id="@+id/tbSoundEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/cursor_list_element_margin"
                android:focusable="false"
                android:gravity="center"
                android:textOff="@string/soundOff"
                android:textOn="@string/soundOn"/>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
